; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_ms_time.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_ms_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i64, i64 }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@CALENDAR_CLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mz_os_ms_time() #0 {
  %1 = alloca %struct.timespec, align 8
  %2 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %3 = call i32 @clock_gettime(i32 %2, %struct.timespec* %1)
  %4 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = mul nsw i32 %6, 1000
  %8 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = trunc i64 %9 to i32
  %11 = sdiv i32 %10, 1000000
  %12 = add nsw i32 %7, %11
  ret i32 %12
}

declare dso_local i32 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
